[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roadcontainer"
version = "0.1.0"
description = "Container Orchestration for BlackRoad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
